--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,5 +3,5 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="/css/main.css" type="text/css" />
+  <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet">
 </head>
