added fonts, updated license.md, other stuff

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -1,3 +1,7 @@
-body {
-  background-color: yellow;
+// Use of ID selector #skylight-styles in cobmo
+// with tags, etc. overrides Twitter Bootstrap styles
+
+body#skylight-styles {
+  font-family: $base-font-family;
+  background-color: $background-color;
 }
