--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,12 +5,12 @@
 
   {% seo %}
 
-  <link rel="stylesheet" href="{{ site.bootstrap_css_url }}"
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
     integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
     crossorigin="anonymous">
   <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet" type="text/css">
 
-  <script src="{{ site.bootstrap_js_url }}"
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
     integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
     crossorigin="anonymous">
   </script>
