initial working version of navmenu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,28 @@
-<header class="header container" role="banner">
-  <a class="logo" href="/">
-    logo
-  </a>
+<header class="navbar navbar-toggleable-sm" role="banner">
 
-  <nav role="navigation" class="nav">
-    nav
+  <nav class="container" role="navigation">
+
+    <div class="d-flex justify-content-between">
+      <a class="navbar-brand" href="#">Skylight</a>
+
+      <div id="navbar-toggler-change" class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle Navigation">
+        <i id="navbar-toggler-open-icon" class="fa fa-bars fa-lg" aria-label="Open"></i>
+        <i id="navbar-toggler-close" class="fa fa-times fa-lg hidden" aria-hidden="true" aria-label="Close"></i>
+      </div>
+    </div>
+
+    <div id="main-nav" class="collapse navbar-collapse justify-content-end">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link" href="/about">About</a>
+        <a class="nav-item nav-link" href="/services">Services</a>
+        <a class="nav-item nav-link" href="/work">Work</a>
+        <a class="nav-item nav-link" href="/culture">Culture</a>
+        <a class="nav-item nav-link" href="/join">Join Us</a>
+        <a class="nav-item nav-link" href="/blog">Blog</a>
+        <a class="nav-item nav-link" href="/hire-us">Hire Us</a>
+      </div>
+    </div>
+
   </nav>
+
 </header>
