--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,10 +9,17 @@
     integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
     crossorigin="anonymous">
 
-  <link href="{{ site.baseurl }}/css/main.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
+
+  <link rel="stylesheet" href="/css/main.css" rel="stylesheet" type="text/css">
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
     integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+    crossorigin="anonymous">
+  </script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+    integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
     crossorigin="anonymous">
   </script>
 
@@ -22,6 +29,8 @@
   </script>
 
   <script src="/js/jquery.scrolldepth.min.js"></script>
+
+  <script src="/js/script.js"></script>
 
   <!--[if lt IE 9]>
     <script src="/js/html5shiv.js"></script>
