removed unused html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,8 +6,7 @@
       <a class="navbar-brand" href="#">Skylight</a>
 
       <div id="navbar-toggler-change" class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle Navigation">
-        <i id="navbar-toggler-open-icon" class="fa fa-bars fa-lg" aria-label="Open"></i>
-        <i id="navbar-toggler-close" class="fa fa-times fa-lg hidden" aria-hidden="true" aria-label="Close"></i>
+        <i class="fa fa-bars fa-lg" aria-label="Open"></i>
       </div>
     </div>
 
