--- a/css/main.scss
+++ b/css/main.scss
@@ -80,6 +80,7 @@
 // Variables
 $base-font-family: "Geomanist", sans-serif;
 $background-color: #ffffff;
+$md-breakpoint: 768px;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
