remove focus style from hamburger

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -27,7 +27,7 @@ body#skylight-styles {
   #navbar-toggler-change {
     color: red;
 
-    &:hover, &:focus {
+    &:hover {
       color: pink;
     }
   }
