initial footer content and rough styling

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,13 +6,38 @@
         <a href="#">Skylight</a>
       </div>
 
-      <nav class="footer-nav col-md-7 offset-md-2">
+      <nav class="footer-nav col-md-9">
         <a class="footer-nav-link" href="/guilds">Guilds</a>
         <a class="footer-nav-link" href="/guides">Guides</a>
         <a class="footer-nav-link" href="/alliances">Alliances</a>
         <a class="footer-nav-link" href="/press">Press</a>
         <a class="footer-nav-link" href="/policies">Policies</a>
       </nav>
+    </div>
+
+    <div class="row">
+      <div class="col-md-3">
+        <a class="btn btn-outline-primary btn-sm" href="{{ site.github_issues_url }}" role="button" target="_blank">
+          Contribute to this site
+        </a>
+      </div>
+
+      <div class="footer-socials col-md-9">
+        <a href="{{ site.twitter_url }}" target="_blank">
+          <i class="fa fa-2x fa-twitter" aria-hidden="true" title="Twitter"></i>
+          <span class="sr-only">Twitter</span>
+        </a>
+
+        <a href="{{ site.linkedin_url }}" target="_blank">
+          <i class="fa fa-2x fa-linkedin" aria-hidden="true" title="LinkedIn"></i>
+          <span class="sr-only">LinkedIn</span>
+        </a>
+
+        <a href="{{ site.github_url }}" target="_blank">
+          <i class="fa fa-2x fa-github" aria-hidden="true" title="GitHub"></i>
+          <span class="sr-only">GitHub</span>
+        </a>
+      </div>
     </div>
   </div>
 
