--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,9 @@
     <div class="d-flex justify-content-between">
       <a class="navbar-brand" href="#">Skylight</a>
 
-      <div id="navbar-toggler-change" class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle Navigation">
-        <i class="fa fa-bars fa-lg" aria-label="Open"></i>
+      <div id="navbar-toggler-change" class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false">
+        <span class="sr-only">Toggle Navigation</span>
+        <i class="fa fa-bars fa-lg" aria-hidden="true"></i>
       </div>
     </div>
 
