finished initial structure, content, and styling for landing page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         <a class="nav-item nav-link" href="/culture">Culture</a>
         <a class="nav-item nav-link" href="/join">Join Us</a>
         <a class="nav-item nav-link" href="/blog">Blog</a>
-        <a class="nav-item nav-link" href="/hire-us">Hire Us</a>
+        <a class="nav-item nav-link pr-0" href="/hire-us">Hire Us</a>
       </div>
     </div>
 
