--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -4,11 +4,7 @@ body#skylight-styles {
   background-color: $background-color;
 
   // **************************************************
-  // Utilities
-  // **************************************************
-
-  // **************************************************
-  // Global TBS ovverides
+  // Global TBS ovverides and extensions
   // **************************************************
   h1, .h1 {
     font-size: 2.5rem;
@@ -40,6 +36,38 @@ body#skylight-styles {
     font-weight: 300;
   }
 
+  .mt-5 {
+    @include mt-5;
+  }
+
+  .mb-0 {
+    @include mb-0;
+  }
+
+  .mb-3 {
+    @include mb-3;
+  }
+
+  .mb-4 {
+    @include mb-4;
+  }
+
+  .pt-3 {
+    @include pt-3;
+  }
+
+  .pb-3 {
+    @include pb-3;
+  }
+
+  .pt-5 {
+    @include pt-5;
+  }
+
+  .pb-5 {
+    @include pb-5;
+  }
+
   // **************************************************
   // Header styles
   // **************************************************
@@ -50,10 +78,6 @@ body#skylight-styles {
   .navbar-toggler { // TBS override
     padding: .35rem;
     font-size: 1.5rem;
-  }
-
-  #main-nav .nav-link:last-child { // TBS override
-    padding-right: 0;
   }
 
   #navbar-toggler-change {
@@ -67,17 +91,16 @@ body#skylight-styles {
   // **************************************************
   // Landing page styles
   // **************************************************
-  .jumbotron { // TBS override
-    margin-bottom: 0;
-  }
-
   .section-lp {
     text-align: center;
+    @include mt-5;
 
-    margin-top: 3rem;
+    .row:not(:last-child) {
+      @include mb-4;
+    }
 
-    h2 { // TBS override
-      margin-bottom: 0;
+    h2 {
+      @include mb-0;
     }
 
     p {
@@ -86,34 +109,87 @@ body#skylight-styles {
     }
 
     p:last-child { // TBS override
-      margin-bottom: 0;
+      @include mb-0;
     }
   }
 
   @media (min-width: $md-breakpoint) {
-    .section-lp {
-      .display-3 {
-        @include display-1;
-      }
+    .section-lp .display-3 {
+      @include display-1;
+    }
+  }
+
+  // **************************************************
+  // Page CTA styles
+  // **************************************************
+  .page-cta {
+    background-color: green;
+    color: white;
+    text-align: center;
+    @include mt-5;
+    @include pt-3;
+    @include pb-3;
+
+    blockquote { // TBS override
+      margin: 0;
+    }
+  }
+
+  .testimonial-quote {
+    font-size: 1.5rem;
+    font-style: italic;
+    font-weight: 400;
+    line-height: 1.25;
+
+    &:before {
+      content: "“";
+      opacity: .5;
+      font-size: inherit;
+    }
+
+    &:after {
+      content: "”";
+      opacity: .5;
+      font-size: inherit;
+    }
+  }
+
+  .testimonial-cite {
+    font-size: .9rem;
+    line-height: 1.5;
+    font-style: normal;
+  }
+
+  .testimonial-author, .testimonial-position, .testimonial-org {
+    display: block;
+  }
+
+  .testimonial-author:before {
+    content: "— ";
+  }
+
+  @media (min-width: $md-breakpoint) {
+    .page-cta {
+      @include pt-5;
+      @include pb-5;
+    }
+
+    .testimonial-quote {
+      font-size: 2.5rem;
+    }
+
+    .testimonial-cite {
+      font-size: 1.25rem;
     }
   }
 
   // **************************************************
   // Footer styles
   // **************************************************
-  footer {
+  .page-footer {
     background-color: yellow;
-    margin-top: 3rem;
-  }
-
-  .footer-content {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-
-    .row > [class^="col-"] {
-      padding-top: .75rem;
-      padding-bottom: .75rem;
-    }
+    @include pt-3;
+    @include pb-3;
   }
 
   .footer-nav-link {
@@ -129,16 +205,27 @@ body#skylight-styles {
     }
   }
 
-  .footer-socials {
-    a:not(:last-child) {
-      padding-right: 25px;
+  .footer-socials a:not(:last-child) {
+    padding-right: 25px;
+  }
+
+  @media (max-width: $md-breakpoint) {
+    .footer-content > div.row > * {
+      @include mb-3;
+    }
+    .footer-content > div:last-child > div:last-child {
+      @include mb-0;
     }
   }
 
   @media (min-width: $md-breakpoint) {
-    .footer-content {
-      padding-top: 2rem;
-      padding-bottom: 2rem;
+    .page-footer {
+      @include pt-5;
+      @include pb-5;
+    }
+
+    .footer-content > div.row:first-child {
+      @include mb-3;
     }
 
     .footer-nav, .footer-socials {
