--- a/css/main.scss
+++ b/css/main.scss
@@ -99,6 +99,38 @@ $md-breakpoint: 768px;
   font-size: 2rem;
 }
 
+@mixin mt-5 {
+  margin-top: 3rem;
+}
+
+@mixin mb-0 {
+  margin-bottom: 0;
+}
+
+@mixin mb-3 {
+  margin-bottom: 1rem;
+}
+
+@mixin mb-4 {
+  margin-bottom: 1.5rem;
+}
+
+@mixin pt-3 {
+  padding-top: 1rem;
+}
+
+@mixin pb-3 {
+  padding-bottom: 1rem;
+}
+
+@mixin pt-5 {
+  padding-top: 3rem;
+}
+
+@mixin pb-5 {
+  padding-bottom: 3rem;
+}
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
   "main"
