--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,7 @@
 
   <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
 
-  <link rel="stylesheet" href="/css/main.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="/css/main.css" type="text/css">
 
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
     integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
