--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
-<header class="navbar navbar-toggleable-sm" role="banner">
+<header class="navbar navbar-toggleable-sm">
 
-  <nav class="container" role="navigation">
+  <nav class="container">
 
     <div class="d-flex justify-content-between">
-      <a class="navbar-brand" href="#">Skylight</a>
+      <a class="navbar-brand" href="/">Skylight</a>
 
       <div id="navbar-toggler-change" class="navbar-toggler" role="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false">
         <span class="sr-only">Toggle Navigation</span>
