--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     {% include header.html %}
 
-    <main id="content" role="main" tabindex="-1">
+    <main id="content" tabindex="-1">
       {{ content }}
     </main>
 
