make logo in footer link to root

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <div class="footer-content container">
     <div class="row">
       <div class="col-md-3">
-        <a href="#">Skylight</a>
+        <a href="/">Skylight</a>
       </div>
 
       <nav class="footer-nav col-md-9">
