added bootstrap source files to project to gain access to their mixins, etc...refactored css and html to take advantage of this

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body id="skylight-styles">
+  <body>
 
     <a href="#content" class="sr-only sr-only-focusable">Skip to Main Content</a>
 
