--- a/css/main.scss
+++ b/css/main.scss
@@ -4,134 +4,13 @@
 
 @charset "utf-8";
 
-// Font face declarations
-@font-face {
-  font-family: "Geomanist";
-  font-style: normal;
-  font-weight: 400;
-  src:  url(/fonts/geomanist-regular-webfont.eot);
-  src:  url(/fonts/geomanist-regular-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-regular-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-regular-webfont.woff) format("woff"),
-        url(/fonts/geomanist-regular-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-regular-webfont.svg#geomanist_regularregular) format("svg");
-}
-
-@font-face {
-  font-family: "Geomanist";
-  font-style: normal;
-  font-weight: 700;
-  src:  url(/fonts/geomanist-medium-webfont.eot);
-  src:  url(/fonts/geomanist-medium-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-medium-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-medium-webfont.woff) format("woff"),
-        url(/fonts/geomanist-medium-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-medium-webfont.svg#geomanistmedium) format("svg");
-}
-
-@font-face {
-  font-family: "Geomanist";
-  font-style: normal;
-  font-weight: 100;
-  src:  url(/fonts/geomanist-light-webfont.eot);
-  src:  url(/fonts/geomanist-light-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-light-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-light-webfont.woff) format("woff"),
-        url(/fonts/geomanist-light-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-light-webfont.svg#geomanistlight) format("svg");
-}
-
-@font-face {
-  font-family: "Geomanist";
-  font-style: italic;
-  font-weight: 400;
-  src:  url(/fonts/geomanist-regular-italic-webfont.eot);
-  src:  url(/fonts/geomanist-regular-italic-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-regular-italic-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-regular-italic-webfont.woff) format("woff"),
-        url(/fonts/geomanist-regular-italic-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-regular-italic-webfont.svg#geomanistregular_italic) format("svg");
-}
-
-@font-face {
-  font-family: "Geomanist";
-  font-style: italic;
-  font-weight: 700;
-  src:  url(/fonts/geomanist-medium-italic-webfont.eot);
-  src:  url(/fonts/geomanist-medium-italic-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-medium-italic-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-medium-italic-webfont.woff) format("woff"),
-        url(/fonts/geomanist-medium-italic-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-medium-italic-webfont.svg#geomanistmedium_italic) format("svg");
-}
-
-@font-face {
-  font-family: "Geomanist";
-  font-style: italic;
-  font-weight: 100;
-  src:  url(/fonts/geomanist-light-italic-webfont.eot);
-  src:  url(/fonts/geomanist-light-italic-webfont.eot?#iefix) format("embedded-opentype"),
-        url(/fonts/geomanist-light-italic-webfont.woff2) format("woff2"),
-        url(/fonts/geomanist-light-italic-webfont.woff) format("woff"),
-        url(/fonts/geomanist-light-italic-webfont.ttf) format("truetype"),
-        url(/fonts/geomanist-light-italic-webfont.svg#geomanistlight_italic) format("svg");
-}
-
-// Variables
-$base-font-family: "Geomanist", sans-serif;
-$background-color: #ffffff;
-$md-breakpoint: 768px;
-
-// Mixins
-@mixin display-1 {
-  font-size: 3rem;
-  font-weight: 400;
-  line-height: 1.1;
-}
-
-@mixin display-2 {
-  @include display-1;
-  font-size: 2.5rem;
-}
-
-@mixin display-3 {
-  @include display-2;
-  font-size: 2rem;
-}
-
-@mixin mt-5 {
-  margin-top: 3rem;
-}
-
-@mixin mb-0 {
-  margin-bottom: 0;
-}
-
-@mixin mb-3 {
-  margin-bottom: 1rem;
-}
-
-@mixin mb-4 {
-  margin-bottom: 1.5rem;
-}
-
-@mixin pt-3 {
-  padding-top: 1rem;
-}
-
-@mixin pb-3 {
-  padding-bottom: 1rem;
-}
-
-@mixin pt-5 {
-  padding-top: 3rem;
-}
-
-@mixin pb-5 {
-  padding-bottom: 3rem;
-}
-
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import
-  "main"
-;
+@import "font_faces";
+@import "custom"; // bootstrap customizations
+@import "bootstrap/bootstrap";
+@import "variables";
+@import "mixins";
+@import "utilities";
+@import "responsive_typography";
+@import "pages/footer";
+@import "pages/landing";
+@import "pages/about";
