--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="page-footer">
 
-  <div class="footer-content container">
+  <div class="footer-content">
     <div class="row">
-      <div class="col-md-3">
+      <div class="footer-brand">
         <a href="/">Skylight</a>
       </div>
 
-      <nav class="footer-nav col-md-9">
+      <nav class="footer-nav">
         <a class="footer-nav-link" href="/guilds">Guilds</a>
         <a class="footer-nav-link" href="/guides">Guides</a>
         <a class="footer-nav-link" href="/alliances">Alliances</a>
@@ -16,13 +16,13 @@
     </div>
 
     <div class="row">
-      <div class="col-md-3">
+      <div class="footer-contribute-cta">
         <a class="btn btn-outline-primary btn-sm" href="{{ site.github_issues_url }}" role="button" target="_blank">
           Contribute to this site
         </a>
       </div>
 
-      <div class="footer-socials col-md-9">
+      <div class="footer-socials">
         <a href="{{ site.twitter_url }}" target="_blank">
           <i class="fa fa-2x fa-twitter" aria-hidden="true" title="Twitter"></i>
           <span class="sr-only">Twitter</span>
