completed refactoring of css/html to take advantage of twbs mixins

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="navbar navbar-toggleable-sm">
 
-  <nav class="container">
+  <nav class="nav-wrapper">
 
     <div class="d-flex justify-content-between">
       <a class="navbar-brand" href="/">Skylight</a>
