--- a/css/main.scss
+++ b/css/main.scss
@@ -11,6 +11,4 @@
 @import "mixins";
 @import "utilities";
 @import "responsive_typography";
-@import "pages/footer";
-@import "pages/landing";
-@import "pages/about";
+@import "pages/pages_manifest";
