--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -1,9 +1,9 @@
 // Spacing
-@mixin mt-5 { margin-top: 3rem; }
-@mixin mb-0 { margin-bottom: 0; }
-@mixin mb-3 { margin-bottom: 1rem; }
-@mixin mb-4 { margin-bottom: 1.5rem; }
-@mixin pt-3 { padding-top: 1rem; }
-@mixin pb-3 { padding-bottom: 1rem; }
-@mixin pt-5 { padding-top: 3rem; }
-@mixin pb-5 { padding-bottom: 3rem; }
+@mixin mt-5 { margin-top: 3rem !important; }
+@mixin mb-0 { margin-bottom: 0 !important; }
+@mixin mb-3 { margin-bottom: 1rem !important; }
+@mixin mb-4 { margin-bottom: 1.5rem !important; }
+@mixin pt-3 { padding-top: 1rem !important; }
+@mixin pb-3 { padding-bottom: 1rem !important; }
+@mixin pt-5 { padding-top: 3rem !important; }
+@mixin pb-5 { padding-bottom: 3rem !important; }
