initial about us page work

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -6,4 +6,6 @@ $font-size-h2-md: 2.50rem;
 
 $font-size-xxxl: 2.5rem;
 $font-size-xxl: 2.0rem;
+$font-size-md: 1rem;
 $font-size-xl: 1.50rem;
+$font-size-xs: .85rem;
