--- a/_sass/pages/_header.scss
+++ b/_sass/pages/_header.scss
@@ -1,3 +1,7 @@
+.navbar {
+  font-size: $font-size-md;
+}
+
 .nav-wrapper {
   @extend .container; // for some reason @include make-container(); won't work
 }
