--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -6,6 +6,11 @@
 // Fonts
 $font-family-sans-serif: "Geomanist", sans-serif;
 
+$font-size-base: 1.125rem;
+$font-size-lg: 1.25rem;
+$font-size-sm: .9rem;
+$font-size-xs: .8rem;
+
 $font-size-h1: 3.25rem;
 $font-size-h2: 3rem;
 $font-size-h3: 2.75rem;
