--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -3,6 +3,7 @@
 @mixin mb-0 { margin-bottom: 0 !important; }
 @mixin mb-3 { margin-bottom: 1rem !important; }
 @mixin mb-4 { margin-bottom: 1.5rem !important; }
+@mixin mb-5 { margin-bottom: 3rem !important; }
 @mixin pt-3 { padding-top: 1rem !important; }
 @mixin pb-3 { padding-bottom: 1rem !important; }
 @mixin pt-5 { padding-top: 3rem !important; }
