--- a/_sass/bootstrap/bootstrap.scss
+++ b/_sass/bootstrap/bootstrap.scss
@@ -32,7 +32,7 @@
 //@import "custom-forms";
 @import "nav";
 @import "navbar";
-//@import "card";
+@import "card";
 //@import "breadcrumb";
 //@import "pagination";
 //@import "badge";
