--- a/_sass/pages/_page.scss
+++ b/_sass/pages/_page.scss
@@ -24,5 +24,9 @@
 
 .page-header-content {
   @extend .mt-4;
-  img { @extend .mb-3; }
+
+  img {
+    @extend .mb-3;
+    @extend .img-fluid;
+  }
 }
