--- a/_sass/bootstrap/bootstrap.scss
+++ b/_sass/bootstrap/bootstrap.scss
@@ -18,7 +18,7 @@
 @import "reboot";
 @import "type";
 @import "images";
-//@import "code";
+@import "code";
 @import "grid";
 @import "tables";
 @import "forms";
@@ -26,28 +26,28 @@
 
 // Components
 @import "transitions";
-//@import "dropdown";
-//@import "button-group";
-//@import "input-group";
-//@import "custom-forms";
+@import "dropdown";
+@import "button-group";
+@import "input-group";
+@import "custom-forms";
 @import "nav";
 @import "navbar";
 @import "card";
-//@import "breadcrumb";
-//@import "pagination";
-//@import "badge";
+@import "breadcrumb";
+@import "pagination";
+@import "badge";
 @import "jumbotron";
-//@import "progress";
-//@import "media";
-//@import "list-group";
-//@import "responsive-embed";
-//@import "close";
+@import "progress";
+@import "media";
+@import "list-group";
+@import "responsive-embed";
+@import "close";
 
 // Components w/ JavaScript
-//@import "modal";
-//@import "tooltip";
-//@import "popover";
-//@import "carousel";
+@import "modal";
+@import "tooltip";
+@import "popover";
+@import "carousel";
 
 // Utility classes
 @import "utilities";
