about page polish, cta's

--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -2,8 +2,8 @@
 
   <div class="container">
 
-    <div class="row">
-      <div class="col-md col-lg-9 mx-auto">
+    <div class="testimonial-wrapper">
+      <div class="testimonial">
         <blockquote>
           <p class="testimonial-quote">
             You would be hard pressed to find a greater assemblage of digital talent.
