--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,8 +1,10 @@
 // Fonts
-$font-size-h1-sm: 2rem;
-$font-size-h2-sm: 1.75rem;
 $font-size-h1-md: 2.75rem;
 $font-size-h2-md: 2.50rem;
+$font-size-h3-md: 2.25rem;
+$font-size-h1-sm: 2rem;
+$font-size-h2-sm: 1.75rem;
+$font-size-h3-sm: 1.5rem;
 
 $font-size-xxxl: 2.5rem;
 $font-size-xxl: 2.0rem;
